# parsable

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test-suite.yml
src/parsable/: __init__.py  backports.py  main.py
tests/: test_basics.py
