[metadata]
name = parsable
description = Text (potentially byte) parsing utilities wrapping python stdlib regex features
author = Gregory Symington (GregSym)
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    parsable
# packages = find:

# [options.packages.find]
# where = src
# include = pkg*


# install_requires =
#     pyodbc>=5.1
#     python-dotenv>=1.0

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=7.0
    mypy>=1.10
    pytest>=8.2
    pytest-cov==5.0
    tox>=4.15
    # typing_extensions>=4.10

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160